Se agrego el primer pasatiempo

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pasatiempos AXLR</title>
 </head>
 <body>
-    <header>MIS PASATIEMPOS</header>
-    
+    <main>
+        <h1>Pasatiempos de Ximena Limon</h1>
+        <h2>1. Escuchar musica</h2>
+    </main>
 </body>
 </html>
