Se agregaron los demas pasatiempos

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <main>
         <h1>Pasatiempos de Ximena Limon</h1>
         <h2>1. Escuchar musica</h2>
+        <h3>2. Me gusta ver series y peliculas </h3>
+        <h4>3. Salir a caminar con mi perrito</h4>
+        <h5>4. Jugar juegos de mesa con mis amigos y familia</h5>
+        <h6>5. Me gusta pintar y colorear</h6>
+
     </main>
 </body>
 </html>
