Se agrego la primera imagen sobre el primer pasatiempo

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <main>
         <h1>Pasatiempos de Ximena Limon</h1>
         <h1>1. Escuchar musica</h1>
+        <img width= 200px src="descarga.jpg" alt="musica">
         <h1>2. Me gusta ver series y peliculas </h1>
         <h1>3. Salir a caminar con mi perrito</h1>
         <h1>4. Jugar juegos de mesa con mis amigos y familia</h1>
