--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <main>
         <h1>Pasatiempos de Ximena Limon</h1>
         <h1>1. Escuchar musica</h1>
-        <img width= 200px src="descarga.jpg" alt="musica">
+        <img width=200px src="descarga.jpg" alt="musica">
         <h1>2. Me gusta ver series y peliculas </h1>
+        <img width=200px src="series.jpg" alt="series">
         <h1>3. Salir a caminar con mi perrito</h1>
+        <img src="caminar.jpg" alt="caminar">
         <h1>4. Jugar juegos de mesa con mis amigos y familia</h1>
         <h1>5. Me gusta pintar y colorear</h1>
 
