--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <h1>3. Salir a caminar con mi perrito</h1>
         <img src="caminar.jpg" alt="caminar">
         <h1>4. Jugar juegos de mesa con mis amigos y familia</h1>
+        <img width=200px src="juegos.jpg" alt="juegos">
         <h1>5. Me gusta pintar y colorear</h1>
+        <img width=200pc src="pintar.jpg" alt="pintar">
 
     </main>
 </body>
