Se modifico el tamaño de una imagen

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>2. Me gusta ver series y peliculas </h1>
         <img width=200px src="series.jpg" alt="series">
         <h1>3. Salir a caminar con mi perrito</h1>
-        <img src="caminar.jpg" alt="caminar">
+        <img width=200px src="caminar.jpg" alt="caminar">
         <h1>4. Jugar juegos de mesa con mis amigos y familia</h1>
         <img width=200px src="juegos.jpg" alt="juegos">
         <h1>5. Me gusta pintar y colorear</h1>
